# ROS_Printing_Station

./: .gitignore  .gitmodules  README.md  RobotMover.rst  frames.gv  requirements.txt
docs/: conf.py  environment_setup.md  index.md  installation.md
docs/_build/html/: gui.html  (+11 more)
scripts/: depends_install.sh  start.sh
scripts/gui/: GuiMover.py  RobotMover.py  gui.py  pick_and_place.py
src/: CMakeLists.txt
src/Knickarmroboter_URDF/: CMakeLists.txt  package.xml
src/URDF_Knickarmroboter/: CMakeLists.txt  package.xml
src/URDF_scara/: CMakeLists.txt  package.xml
src/fertig/: CMakeLists.txt  package.xml
src/full_station/: CMakeLists.txt  package.xml
src/gesamt_station/: CMakeLists.txt  package.xml
src/gesamt_station/config/: joint_names_gesamt_station.yaml
src/gesamt_station/launch/: display.launch  gazebo.launch
src/gesamt_station/meshes/: boxes.STL  knick_base_link.STL  knick_link1.STL  knick_link2.STL  knick_link3.STL  knick_link4.STL  knick_link5.STL  knick_link6.STL  knickarm_sockel.STL  scara_link_2.STL  scara_link_3.STL  tisch.STL
src/gesamt_station/urdf/: gesamt_station.csv  gesamt_station.urdf
src/gui/: gui.py
src/moveit_package/: CMakeLists.txt  package.xml
src/printing_station/: CMakeLists.txt  package.xml
src/printing_station/config/: moveit.rviz
src/printing_station/launch/: gazeboandcontroller.launch  platform.launch  printing_station  run.launch  station.launch
src/printing_station/scripts/: RobotMover.py  goal_poses.py  move_robots.py  pick_and_place.py  spawn_morobot.py  start.sh
src/printing_station/src/inspection_bot/: gui_talker.cpp
src/printing_station/src/picking_bot/: gui_talker.cpp
src/printing_station/urdf/: camera.sdf  camera2.sdf  conveyor.sdf  fence.sdf  fence_behind.sdf  laser.sdf  laser_beam.sdf  morobot.sdf  printer_stand.urdf
src/printing_station/urdf/inspection_bot/: printer_stand.urdf  robot.urdf
src/printing_station/waypoints/: knick_wp.json  scara_wp.json  scara_wp2.json
src/scara_boxes/: CMakeLists.txt  package.xml
src/scara_moveit_config/: .setup_assistant  package.xml
src/station_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/test/: .setup_assistant  package.xml
(+121 files in other folders)
